--- a/doc/USER_MANUAL/B_channel_codes.tex
+++ b/doc/USER_MANUAL/B_channel_codes.tex
@@ -72,8 +72,7 @@ is set to \texttt{.true.}, then the three components are labelled
 
 
 \noindent \texttt{\textbf{EXAMPLE:}} The sampling rate is given by
-\texttt{DT} in the main parameter file \texttt{Par\_file} located
-in the \texttt{DATA/} subdirectory. Depending on the resolution of
+\texttt{DT} in the main parameter file \texttt{DATA/Par\_file}. Depending on the resolution of
 your simulations, if you choose a sampling rate greater than $0.01$
 s and less than $1$ s, a seismogram recording displacements on the
 vertical component of a station \texttt{ASBS} (network \texttt{AZ})
